--- a/clusters/docker-desktop/infra/helmrepo-podinfo.yaml
+++ b/clusters/docker-desktop/infra/helmrepo-podinfo.yaml
@@ -1,8 +1,9 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: bitnami
+  name: podinfo
   namespace: flux-system
 spec:
+  type: oci
+  url: oci://ghcr.io/stefanprodan/charts
   interval: 1m
-  url: https://charts.bitnami.com/bitnami
