--- a/clusters/docker-desktop/kustomization.yaml
+++ b/clusters/docker-desktop/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespaces/demo.yaml
-  - infra/helmrepo-bitnami.yaml
+  - infra/helmrepo-podinfo.yaml
   - apps/podinfo-hr.yaml
